# GameProfile

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  main.py  pyproject.toml
backend/api/: __init__.py
backend/api/v1/: __init__.py
backend/api/v1/route/: __init__.py  users.py
core/: .env  README.md  pyproject.toml
core/alembic/: env.py
core/alembic/versions/: 0191750814c3_added_user_table.py  2540c4bc0bef_added_game_usergame_table.py
core/core/: config.py  connections.py  models.py
data/: Diagram.drawio  README.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue
frontend/src/components/: HelloWorld.vue  TheWelcome.vue  TopUsers.vue
